force-app/main/default/objects/Equipment__c/fields/Calibration_Interval_Days__c.field-meta.xml
<CustomField>
    <fullName>Calibration_Interval_Days__c</fullName>
    <label>Calibration Interval (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>