force-app/main/default/objects/Equipment__c/fields/Days_Until_Next_Calibration__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Next_Calibration__c</fullName>
    <formula>IF( NOT(IsBlank(Next_Due_Date__c)) &amp;&amp; TODAY() &lt;= Next_Due_Date__c,
Next_Due_Date__c - Today(),
Null)</formula>
    <label>Days Until Next Calibration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>