force-app/main/default/objects/Equipment__c/fields/Last_Calibration_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Calibration_Date__c</fullName>
    <label>Last Calibration Date</label>
    <summarizedField>Calibration_Event__c.Date_of_Calibration__c</summarizedField>
    <summaryForeignKey>Calibration_Event__c.Equipment__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>