force-app/main/default/objects/Equipment__c/fields/Next_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Due_Date__c</fullName>
    <formula>IF( NOT(ISBLANK(Last_Calibration_Date__c)) &amp;&amp; NOT(ISBLANK(Calibration_Interval_Days__c)), 
Last_Calibration_Date__c +  Calibration_Interval_Days__c ,Null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Due Date</label>
    <type>Date</type>
</CustomField>