force-app/main/default/objects/Equipment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Manufacturer__c</columns>
    <columns>Serial_Number__c</columns>
    <columns>Department__c</columns>
    <columns>Calibration_Interval_Days__c</columns>
    <columns>Next_Due_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>