force-app/main/default/objects/Equipment__c/listViews/Calibration_Due_This_Week.listView-meta.xml
<ListView>
    <fullName>Calibration_Due_This_Week</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Manufacturer__c</columns>
    <columns>Model_Number__c</columns>
    <columns>Serial_Number__c</columns>
    <columns>Department__c</columns>
    <columns>Calibration_Interval_Days__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Next_Due_Date__c</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>Calibration Due This Week</label>
</ListView>